<resources>
    <string name="app_name">kiNOW</string>

    <!-- Strings used for NavigationBar -->
    <string name="location">Location</string>
    <string name="movies">Movies</string>
    <string name="cart">Purchases</string>
    <string name="account">Account</string>

    <!-- Strings for Default Content -->
    <string name="contentDescription">Default Content Description</string>
    <string name="movieTitle">Title</string>
    <string name="locTitle">LocationTitle</string>
    <string name="movieDescription">Description</string>
    <string name="locDescription">Description of Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
