<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/relLayout">

    <!-- CardView for LocationImage -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLoc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/contentDescription"
                android:id="@+id/locImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/location_sample_image"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!-- CardView for Title and Description -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cardViewLoc"
        android:layout_alignTop="@+id/cardViewLoc"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/cardViewLoc"
        android:layout_toRightOf="@+id/cardViewLoc"
        android:elevation="5dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/locTitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locTitle"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:maxLength="30"
                android:text="@string/locDescription"
                android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>